services/bar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-app-bar
  labels:
    app.kubernetes.io/name: k8s-app-bar
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-app-bar
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-app-bar
    spec:
      containers:
        - name: k8s-app-bar
          image: k8s-app:1.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
          volumeMounts:
            - name: config-volume
              mountPath: /app/application.yaml
              subPath: conf.yaml
      volumes:
        - name: config-volume
          configMap:
            name: k8s-app-bar-configmap
