services/bar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app-bar
  labels:
    app.kubernetes.io/name: k8s-app-bar
spec:
  selector:
    app.kubernetes.io/name: k8s-app-bar
  ports:
    - protocol: TCP
      port: 8080
