services/bar/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: minikube
    http:
      paths:
      - path: /k8s-app-bar/(.+)
        backend:
          serviceName: k8s-app-bar
          servicePort: 8080
